Fixed display: none on breadcrumbs header to use .clipped

--- a/breadcrumbs/breadcrumbs.css
+++ b/breadcrumbs/breadcrumbs.css
@@ -1,7 +1,4 @@
-.breadcrumbs h3 {
-    display: none;
-}
-.breadcrumbs h3:after {
+.breadcrumbs h2:after {
     content: ': ';
 }
 .breadcrumbs ol {
